--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,6 +7,6 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <h3>
-        Grabbing user @Model.FirstName
+        @*Grabbing user @Model.FirstName*@
     </h3>
 </div>
