--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -7,7 +7,7 @@
     //var firstName = Model.FirstOrDefault().User; // Default to "Guest" if null
     var firstName = ViewBag.FirstName;
     var currentRoutine = ViewBag.CurrentRoutine;
-    var currRtn = Model.FirstOrDefault().User.CurrentWorkoutRoutineId; // ****** FIGURE OUT WHY USER US NULL ******
+    //var currRtn = Model.FirstOrDefault().User.CurrentWorkoutRoutineId; // ****** FIGURE OUT WHY USER US NULL ******
 }
 
 <div row>
@@ -23,7 +23,6 @@
                 else
                 {
                     <p>First name: @firstName</p>
-                    <p>Current routine: @currRtn</p>
                 }
             </li>
             <li class="list-group-item">
@@ -46,11 +45,11 @@
             <ul>
                 @if(routine.WorkoutRoutineId == currentRoutine)
                 {
-                    <a asp-controller="Workout" asp-route-id="@routine.WorkoutRoutineId" asp-action="ViewRoutine">@routine.RoutineName</a> <p>Your current routine</p>
+                    <li><a asp-controller="Workout" asp-route-id="@routine.WorkoutRoutineId" asp-action="ViewRoutine">@routine.RoutineName</a> - Your current routine</li>
                 }
                 else
                 {
-                    <a asp-controller="Workout" asp-route-id="@routine.WorkoutRoutineId" asp-action="ViewRoutine">@routine.RoutineName</a>
+                    <li><a asp-controller="Workout" asp-route-id="@routine.WorkoutRoutineId" asp-action="ViewRoutine">@routine.RoutineName</a></li>
                 }
             </ul>
         }
