--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
     else
     {
         <h1 class="display-4">Welcome</h1>
+        <a class="btn btn-primary" href="@Url.Action("Register", "Account")">Register</a>
+        <a class="btn btn-primary" href="@Url.Action("Login", "Account")">Login</a>
     }
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
